--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -20,6 +20,8 @@
   --vt-c-text-light-2: rgba(60, 60, 60, 0.66);
   --vt-c-text-dark-1: var(--vt-c-white);
   --vt-c-text-dark-2: rgba(235, 235, 235, 0.64);
+  --bs-primary-rgb: 248, 15, 180;
+  --bs-secondary-rgb: 150, 15, 180;
 }
 
 /* semantic color variables for this project */
